Update 002 Табличные пространства.md

--- a/001 Администрирование/002 Структура данных/002 Табличные пространства.md
+++ b/001 Администрирование/002 Структура данных/002 Табличные пространства.md
@@ -115,6 +115,10 @@ select pg_relation_filepath('t_pkey');
 
 [Размер таблицы](https://github.com/AV-ghub/PostgreSQL/blob/main/001%20%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5/010%20%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8%20%D0%B0%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F/%D0%9F%D0%BE%D0%BB%D0%B5%D0%B7%D0%BD%D1%8B%D0%B5%20%D1%81%D0%BA%D1%80%D0%B8%D0%BF%D1%82%D1%8B.md#%D1%80%D0%B0%D0%B7%D0%BC%D0%B5%D1%80-%D1%82%D0%B0%D0%B1%D0%BB%D0%B8%D1%86%D1%8B)
 
+</details>
+
+<details><summary><h3>TOAST</h3></summary>
+  
 #### TOAST
 Бинарные данные хранятся также за пределами строки в отдельной структуре, нарезанной на чанки.
 Хранится все это в схеме **pg_toast**. Временные - в **pg_toast_temp_N**.
@@ -140,10 +144,79 @@ select pg_relation_filepath('t_pkey');
 ALTER TABLE t ALTER COLUMN c SET STORAGE EXTERNAL;
 ```
 
+#### What Is Postgres TOAST?
+TOAST refers to the automatic mechanism that PostgreSQL uses to efficiently store and manage values in Postgres that do not fit within a page.  
+* To handle such values, Postgres TOAST will, by default, _**compress them using an internal algorithm**_.  
+* If, after compression, the values are still too large, Postgres will _**move them to a separate table**_ (called the TOAST table), leaving pointers in the original table. 
+
+#### TOAST-able Data Types 
+The data types that might be subjected to TOAST are primarily variable-length ones.  
+
+Some examples of data types that might be subjected to TOAST are: 
+
+* json and jsonb
+* Large text strings
+* varchar and varchar(n) (If the length specified in varchar(n) is small enough, then values of that column might always stay below the TOAST threshold.)
+* bytea storing binary data
+* Geometric data like path and polygon and PostGIS types like  geometry or geography
+
+#### How Does Postgres TOAST Work? 
+> Typically, the TOAST mechanism kicks in if all fields within a tuple have a total size of over _**2 kB**_ approx. That’s because PostgreSQL likes to ensure it can store multiple tuples on a single page: if tuples are too large, fewer tuples fit on each page, leading to _**increased I/O operations**_ and reduced performance. Postgres also _**needs**_ to keep free space to _**fit additional operational data**_.
+
+When the combined size of all fields in a tuple exceeds approximately 2 kB (or the TOAST threshold parameter), PostgreSQL handles in two ways:
+
+* **Compression**. PostgreSQL can compress the large field values within the tuple to reduce their size using a compression algorithm that we’ll cover later in this article. By default, if compression is sufficient to bring the tuple's total size below the threshold, the data will remain in the main table, albeit in a compressed format.
+* **Out-of-line storage**. If compression alone isn't effective enough to reduce the size of the large field values, Postgres moves them to a separate TOAST table. This process is known as "out-of-line" storage because the original tuple in the main table doesn’t hold the large field values anymore. Instead, it contains a "pointer" or reference to the location of the large data in the TOAST table. 
+
+### Configuring TOAST
+#### TOAST strategies
+* **EXTENDED**: This is the default strategy. It implies the data will be stored out of line in a separate TOAST table if it’s too large for a regular table page. Before moving the data to the TOAST table, it will be compressed to save space.
+* **EXTERNAL**: This strategy tells PostgreSQL to store the data for this column out of line if the data is too large to fit in a regular table page, and we’re asking PostgreSQL _**not to compress**_ the data—the value will just be moved to the TOAST table as-is.
+* **MAIN**: This strategy is a middle ground. It tries to keep data in line in the main table through compression; if the data is definetely too large, it'll move the data to the TOAST table to avoid an error, but PostgreSQL _**won't move the compressed data**_. Insead, it’ll store the value in the TOAST table in its original form.
+* **PLAIN**: Using PLAIN in a column tells PostgreSQL to _**always store the column's data in line**_ in the main table, ensuring it isn't moved to an out-of-line TOAST table. Take into account that if the data grows beyond the page size, the _**INSERT will fail because the data won’t fit**_. 
+
+If you wish to modify the storage setting, you can do so using the following command: 
+```
+-- Sets EXTENDED as the TOAST strategy for bar_column 
+ALTER TABLE example_blob ALTER COLUMN bar_column SET STORAGE EXTENDED;
+```
+#### Key parameters
+**TOAST_TUPLE_THRESHOLD**
+This is the parameter that sets _**the size threshold**_ for when TOASTing operations (compression and out-of-line storage) are considered for oversized tuples.  
+As we’ve mentioned previously, by default, TOAST_TUPLE_THRESHOLD is set to approximately 2 kB. 
+
+**TOAST_COMPRESSION_THRESHOLD**
+This is the parameter that specifies the _**minimum size**_ of a value before Postgres _**considers compressing**_ it during the TOASTing process.
+
+> However, just because a value is above the compression threshold, it doesn't automatically mean it will be compressed: the TOAST strategies will guide PostgreSQL on how to handle the data based on whether it was compressed and its resultant size relative to the tuple and page limits.
+
+#### Bringing it all together
+**TOAST_TUPLE_THRESHOLD** is the trigger point. When the size of a tuple's data fields combined exceeds this threshold, PostgreSQL will evaluate how to manage it based on the set TOAST strategy for its columns, considering compression and out-of-line storage. 
+
+The exact actions taken will also depend on whether column data surpasses the TOAST_COMPRESSION_THRESHOLD: 
+
+* **EXTENDED** (default strategy): If a tuple's size exceeds TOAST_TUPLE_THRESHOLD, PostgreSQL will first attempt to compress the oversized columns if they also exceed **TOAST_COMPRESSION_THRESHOLD**. If compression brings the tuple size under the threshold, it will remain in the main table. If it doesn't, the data will be moved to an out-of-line TOAST table, and the main table will contain pointers to this external data.
+* **MAIN**: If the tuple size surpasses the **TOAST_TUPLE_THRESHOLD**, PostgreSQL will try to compress the oversized columns (provided they're over the **TOAST_COMPRESSION_THRESHOLD**). If compression allows the tuple to fit within the main table's tuple, it remains there. If not, the data is moved to the TOAST table in its uncompressed form.
+* **EXTERNAL**: PostgreSQL skips compression, regardless of the **TOAST_COMPRESSION_THRESHOLD**. If the tuple's size is beyond the **TOAST_TUPLE_THRESHOLD**, the oversized columns will be stored out-of-line in the TOAST table.
+* **PLAIN**: Data is always stored in the main table. If a tuple's size exceeds the page size (due to having very large columns), an error is raised.
+
+### Why TOAST Isn't Enough as a Data Compression Mechanism in PostgreSQL 
+TOAST is mainly a solution to one problem: managing large values within the structural confines of a Postgres page.  
+
+And there are other inherent problems with using TOAST as a traditional compression mechanism in PostgreSQL, for example:
+
+* Accessing TOASTed data can add overhead, especially when the data is stored out of line. This becomes more evident _**when many large text or other TOAST-able data types are frequently accessed**_.
+* TOAST lacks a high-level, user-friendly mechanism for dictating compression policies. It’s not built to optimize storage costs or facilitate storage management.  
+_**TOAST's compression is not designed to provide especially high compression ratios**_. It only uses one algorithm (pglz) with compression rates varying typically from 25-50 percent. 
+
+### Adding Columnar Compression to PostgreSQL
+This transformative approach transcends PostgreSQL’s conventional row-based storage paradigm, introducing the efficiency and performance of columnar storage.
+
+By adding a compression policy to your large tables, you can reduce your PostgreSQL database size by up to 10x (achieving +90 percent compression rates).  
+This columnar compression design offers an efficient and scalable solution to the problem of large datasets in PostgreSQL.   
+It allows you to use less storage to store more data without hurting your query performance (it actually improves it).
+
 </details>
-
-
-
 
 
 
