Update 002 Табличные пространства.md

--- a/001 Администрирование/002 Структура данных/002 Табличные пространства.md
+++ b/001 Администрирование/002 Структура данных/002 Табличные пространства.md
@@ -144,6 +144,8 @@ select pg_relation_filepath('t_pkey');
 ALTER TABLE t ALTER COLUMN c SET STORAGE EXTERNAL;
 ```
 
+### [What Is TOAST](https://www.timescale.com/blog/what-is-toast-and-why-it-isnt-enough-for-data-compression-in-postgres/)
+
 #### What Is Postgres TOAST?
 TOAST refers to the automatic mechanism that PostgreSQL uses to efficiently store and manage values in Postgres that do not fit within a page.  
 * To handle such values, Postgres TOAST will, by default, _**compress them using an internal algorithm**_.  
