Update 002 Табличные пространства.md

--- a/001 Администрирование/002 Структура данных/002 Табличные пространства.md
+++ b/001 Администрирование/002 Структура данных/002 Табличные пространства.md
@@ -117,7 +117,7 @@ select pg_relation_filepath('t_pkey');
 
 </details>
 
-<details><summary><h3>TOAST</h3></summary>
+<details><summary><h3>What Is TOAST</h3></summary>
   
 #### TOAST
 Бинарные данные хранятся также за пределами строки в отдельной структуре, нарезанной на чанки.
