Update 002 Полезные скрипты.md

--- a/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
@@ -209,3 +209,49 @@ WHERE s.idx_scan = 0      -- has never been scanned
           WHERE inh.inhrelid = s.indexrelid)
 ORDER BY pg_relation_size(s.indexrelid) DESC;
 ```
+
+#### Генерация рандомной строки
+[2](https://github.com/AV-ghub/PostgreSQL/blob/main/004%20%D0%9E%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0%20%D0%BE%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D0%B8/Links.md).[70]
+```
+CREATE OR REPLACE FUNCTION generate_random_string(
+length INTEGER,
+characters TEXT default
+'0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrst
+uvwxyz'
+) RETURNS TEXT AS
+$$
+DECLARE
+result TEXT := '';
+BEGIN
+IF length < 1 then
+RAISE EXCEPTION 'Invalid length';
+END IF;
+FOR __ IN 1..length LOOP
+result := result || substr(characters, floor(random()
+* length(characters))::int + 1, 1);
+end loop;
+RETURN result;
+END;
+$$ LANGUAGE plpgsql;
+```
+Использование
+```
+INSERT INTO toast_test (value) VALUES
+(generate_random_string(1024 * 10));
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
