Update 002 Полезные скрипты.md

--- a/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
@@ -236,11 +236,17 @@ $$ LANGUAGE plpgsql;
 ```
 Использование
 ```
-INSERT INTO toast_test (value) VALUES
-(generate_random_string(1024 * 10));
+INSERT INTO toast_test (value)
+VALUES (generate_random_string(1024 * 10));
 ```
-
-
+#### Генерация таблицы 10 тысяч строк из JSONB-объектов размером по 10 тысяч элементов
+```
+\timing
+CREATE TABLE t AS
+SELECT i AS id, (SELECT jsonb_object_agg(j, j)
+                 FROM generate_series(1, 1000) j) js
+FROM generate_series(1, 10000) i;
+```
 
 
 
