--- a/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
@@ -119,6 +119,10 @@ AND relkind = 'r';  -- обычные таблицы
 ```sql
 SELECT pg_database_size('data_lowlevel');
 ```
+### Текущий lsn
+```
+SELECT pg_current_wal_lsn();
+```
 Размеры будут отличаться, т.к. вторая функция возвращает размер каталога файловой системы, а в этом каталоге находятся несколько служебных файлов.
 ### PSQL
 ```bash
