Update 002 Полезные скрипты.md

--- a/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
@@ -119,7 +119,7 @@ AND relkind = 'r';  -- обычные таблицы
 ```sql
 SELECT pg_database_size('data_lowlevel');
 ```
-### Текущий lsn
+#### Текущий lsn
 ```
 SELECT pg_current_wal_lsn();
 ```
