--- a/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Диск.md
+++ b/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Диск.md
@@ -4,3 +4,23 @@
 #### Disabling drive write caches [3](https://github.com/AV-ghub/PostgreSQL/blob/main/998%20Books/List.md).[39]
 
 #### Complicated disk benchmarks [3](https://github.com/AV-ghub/PostgreSQL/blob/main/998%20Books/List.md).[67]
+
+<details><summary><h4>General Linux filesystem tuning</h5></summary>
+
+   #### Read-ahead [3](https://github.com/AV-ghub/PostgreSQL/blob/main/998%20Books/List.md).[87]
+
+   When doing sequential reads that seem to be moving forward, this feature results in Linux asking for blocks from the disk ahead of the application requesting them.  
+   The usual symptom of insufficient readahead is noting that write speed to a disk is faster than its read speed. The impact is not subtle; proper read-ahead can easily result in 100% or larger increase in sequential read performance.  
+   That corresponds to a big increase in large sequential I/O operations in PostgreSQL, too, including sequential scans of tables and bulk operations like COPY imports.  
+   You can check your current read-ahead using the blockdev command:
+   ```
+   $ blockdev --getra /dev/sda
+   ```
+   The default is **256** for regular drives, and may be larger for software RAID devices. The units here are normally 512 bytes, making the default value equal to 128 KB of read-ahead. The normal properly tuned range on current hardware usually works out to be **4096** to **16384**, making this change:
+   ```
+   $ blockdev --setra 4096 /dev/sda
+   ```
+   Unfortunately, read-ahead needs to be set for each drive on your system. It's usually handled by putting a blockdev adjustment for each device in the rc.local boot script. 
+   > The Linux read-ahead implementation was developed with PostgreSQL as an initial target, and it's unlikely you will discover increased read-ahead detuning smaller reads as you might fear. The implementation is a bit smarter than that.
+
+</details>
