--- a/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Память.md
+++ b/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Память.md
@@ -16,6 +16,53 @@
 ## Memory for Database Caching [3](https://github.com/AV-ghub/PostgreSQL/blob/main/998%20Books/List.md).[106]
 <details><summary><h4>Memory units in the postgresql.conf file</h5></summary>
 
+  The major component to the shared memory used by the server is a large block allocated for caching blocks read from and written to the database. This is set by a parameter named   **shared_buffers**.  
   
+  ### Memory units in the postgresql.conf file [3](https://github.com/AV-ghub/PostgreSQL/blob/main/998%20Books/List.md).[107]
+  All of the shared memory settings and the starting client settings for the database are stored in the postgresql.conf file.  
+  Use the SHOW command to display the value for this setting.  
+  The pg_settings view in the database can be used.  
+  ```
+  show shared_buffers;
+  select name, setting, unit, current_setting(name) from pg_settings where name = 'shared_buffers'
+  ```
+
+  ### Increasing UNIX shared memory parameters for larger buffer sizes [3](https://github.com/AV-ghub/PostgreSQL/blob/main/998%20Books/List.md).[108]
+  When you use the initdb command to create a new PostgreSQL cluster, the server detects how large of a shared memory block it can allocate by starting at a moderate value and _**decreasing it until the allocation is successful**_.  
   
+  The following program will produce reasonable starting values by asking getconf for information about how much memory is in your system. Create a shmsetup.sh file with the following contents:
+  ```
+  #!/bin/bash
+  # simple shmsetup script
+  page_size=`getconf PAGE_SIZE`
+  phys_pages=`getconf _PHYS_PAGES`
+  shmall=`expr $phys_pages / 2`
+  shmmax=`expr $shmall \* $page_size`
+  echo kernel.shmmax = $shmmax
+  echo kernel.shmall = $shmall
+  ```
+  After changing the permission of the shmsetup.sh file, execute the script as follows:
+  ```
+  $ chmod +x shmsetup.sh
+  $ ./shmsetup.sh
+  kernel.shmmax = 2123816960
+  kernel.shmall = 518510
+  ```
+
 </details>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
