--- a/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Память.md
+++ b/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Память.md
@@ -49,6 +49,62 @@
   kernel.shmall = 518510
   ```
 
+  ### Kernel semaphores
+  Another occasional sysctl tweaking requirement for PostgreSQL is to increase the number of system semaphores, an object _**used for process communication**_.
+
+  ### Estimating shared memory allocation
+  It's possible to predict how much memory the PostgreSQL server is expected to allocate given the server parameters.  
+  _**Very little of this is likely to matter**_ to you because all the other sizes are _**dwarfed by shared_buffers**_ unless your client count is extremely high.  
+
+  ### Inspecting the database cache
+  You can look inside the current contents of the PostgreSQL shared_buffers database cache using the **pg_buffercache** module.   
+  Its SQL component needs to be installed in each database you want to monitor.   
+  ```
+  $ createdb pgbench
+  $ psql pgbench
+  pgbench=# CREATE EXTENSION pg_buffercache;
+  ```
+  You can confirm that the utility is working as expected by looking at how large your system shared_buffers is, and noting that the count of entries returned by pg_buffercache
+matches it:
+  ```
+  postgres=# select name, setting from pg_settings where name = 'shared_buffers';
+      name      | setting 
+  ----------------+---------
+  shared_buffers | 16384
+
+  postgres=# select count(*) from pg_buffercache;
+  count 
+  -------
+  16384
+  ```
+  
+  ### Database disk layout
+  The location of this and other important files on the server is available from the pg_settings view
+  ```
+  postgres=# show data_directory;
+  data_directory        
+  -----------------------------
+  /var/lib/postgresql/16/main
+  ```
+  To decipher the structure of what's in the base/ directory, we need the OID of the database and the relation OID
+  ```
+  postgres=# select datname, oid from pg_database;
+  datname  |  oid  
+  -----------+-------
+  postgres  |     5
+
+  postgres=# select relname, oid, relfilenode from pg_class limit 1;
+  relname     |  oid  | relfilenode 
+  ----------------+-------+-------------
+  pg_buffercache | 24580 |           0
+  ```
+  
+
+
+
+
+  
+
 </details>
 
 
