--- a/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Память.md
+++ b/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Память.md
@@ -13,9 +13,10 @@
 
 [Пример тюнинга с тестами](https://github.com/AV-ghub/PostgreSQL/blob/main/004%20%D0%9E%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0%20%D0%BE%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D0%B8/%D0%A1%D1%86%D0%B5%D0%BD%D0%B0%D1%80%D0%B8%D0%B8/%D0%A7%D0%B0%D1%81%D1%82%D0%BD%D1%8B%D0%B5/PostgreSQL%20and%20OS%20tuning%20with%20perf%20tests.md)   
 
-## Memory for Database Caching [3](https://github.com/AV-ghub/PostgreSQL/blob/main/998%20Books/List.md).[106]
-<details><summary><h4>Memory units in the postgresql.conf file</h5></summary>
+<details><summary><h2>Memory for Database Caching</h2></summary>
 
+  [3](https://github.com/AV-ghub/PostgreSQL/blob/main/998%20Books/List.md).[106]
+  
   The major component to the shared memory used by the server is a large block allocated for caching blocks read from and written to the database. This is set by a parameter named   **shared_buffers**.  
   
   ### Memory units in the postgresql.conf file [3](https://github.com/AV-ghub/PostgreSQL/blob/main/998%20Books/List.md).[107]
