--- a/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Память.md
+++ b/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Память.md
@@ -99,10 +99,55 @@ matches it:
   ----------------+-------+-------------
   pg_buffercache | 24580 |           0
   ```
+  ### Creating a new block in a database
+  Once you insert something into this table, a page is allocated in the buffer cache to hold that new information, and a standard 8K block is allocated on disk:
+  ```
+  postgres=# create table foo (a int, b int);
+  postgres=# select relname, oid, relfilenode from pg_class limit 1;
+      relname     |  oid  | relfilenode 
+  ----------------+-------+-------------
+   pg_buffercache | 24580 |           0
   
+  postgres=# select relname, oid, relfilenode from pg_class where relname = 'foo' limit 1;
+   relname |  oid  | relfilenode 
+  ---------+-------+-------------
+   foo     | 49239 |       49239
+  
+  postgres=# select relfilenode from pg_buffercache where relfilenode = 49239;
+   relfilenode 
+  -------------
+  
+  postgres=# insert into foo values(0,0);
+  INSERT 0 1
+  postgres=# select relfilenode from pg_buffercache where relfilenode = 49239;
+   relfilenode 
+  -------------
+         49239
+  
+  postgres=# select reldatabase, relfilenode, relblocknumber, isdirty, usagecount from pg_buffercache where relfilenode = 49239;
+   reldatabase | relfilenode | relblocknumber | isdirty | usagecount 
+  -------------+-------------+----------------+---------+------------
+             5 |       49239 |              0 | t       |          1
+  ```
+  Note that this block is dirty. That means that the version in memory has not been written out to disk yet. Also note that the usagecount value for it is 1. This means that one
+database process has accessed this block since its section of the buffer cache was last considered as a candidate for reuse.
 
+### Writing dirty blocks to disk
+There are a couple of ways blocks that are dirty can be written to disk. The easiest one to trigger at will is a checkpoint.  
+A checkpoint iterates _**over every dirty block**_ in the system as of a point in time, writing them out to disk.
 
+### Database buffer cache versus operating system cache
+PostgreSQL does not assume or even prefer that the majority of the memory on the system be allocated for its use. Most reads and writes from the database are done using standard operating system calls.
 
+Sizing shared_buffers generally specifies a suggestion in terms of a _**percentage of system RAM**_.   
+Some advocate only _**10-15%**_.   
+The thorough academic exploration found _**40%**_ optimal on a 1 GB system _**being tested on a wide range of queries**_.    
+And occasionally reports appear where _**60%**_ or more of total RAM turns out to be optimal.
+
+Giving the database _**25% of total RAM**_ is a reasonable starting setting for shared_buffers in the middle of the effective range.   
+It may not be optimal, but it's unlikely to be so high that double buffering becomes an issue.
+
+### Analyzing buffer cache contents
 
   
 
