--- a/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Память.md
+++ b/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Память.md
@@ -132,25 +132,99 @@ matches it:
   Note that this block is dirty. That means that the version in memory has not been written out to disk yet. Also note that the usagecount value for it is 1. This means that one
 database process has accessed this block since its section of the buffer cache was last considered as a candidate for reuse.
 
-### Writing dirty blocks to disk
-There are a couple of ways blocks that are dirty can be written to disk. The easiest one to trigger at will is a checkpoint.  
-A checkpoint iterates _**over every dirty block**_ in the system as of a point in time, writing them out to disk.
-
-### Database buffer cache versus operating system cache
-PostgreSQL does not assume or even prefer that the majority of the memory on the system be allocated for its use. Most reads and writes from the database are done using standard operating system calls.
-
-Sizing shared_buffers generally specifies a suggestion in terms of a _**percentage of system RAM**_.   
-Some advocate only _**10-15%**_.   
-The thorough academic exploration found _**40%**_ optimal on a 1 GB system _**being tested on a wide range of queries**_.    
-And occasionally reports appear where _**60%**_ or more of total RAM turns out to be optimal.
-
-Giving the database _**25% of total RAM**_ is a reasonable starting setting for shared_buffers in the middle of the effective range.   
-It may not be optimal, but it's unlikely to be so high that double buffering becomes an issue.
-
-### Analyzing buffer cache contents
+  ### Writing dirty blocks to disk
+  There are a couple of ways blocks that are dirty can be written to disk. The easiest one to trigger at will is a checkpoint.  
+  A checkpoint iterates _**over every dirty block**_ in the system as of a point in time, writing them out to disk.
+  
+  ### Database buffer cache versus operating system cache
+  PostgreSQL does not assume or even prefer that the majority of the memory on the system be allocated for its use. Most reads and writes from the database are done using standard operating system calls.
+  
+  Sizing shared_buffers generally specifies a suggestion in terms of a _**percentage of system RAM**_.   
+  Some advocate only _**10-15%**_.   
+  The thorough academic exploration found _**40%**_ optimal on a 1 GB system _**being tested on a wide range of queries**_.    
+  And occasionally reports appear where _**60%**_ or more of total RAM turns out to be optimal.
+  
+  Giving the database _**25% of total RAM**_ is a reasonable starting setting for shared_buffers in the middle of the effective range.   
+  It may not be optimal, but it's unlikely to be so high that double buffering becomes an issue.
+  
+  ## Analyzing buffer cache contents
+  ### Inspection of the buffer cache queries
+  The pg_buffercache module needs to be installed into the pgbench database.   
+  > pg_buffercache requires broad locks on parts of the buffer cache when it runs.
+  > As such, it's extremely intensive on the server when you run any of these queries.
+  > They are not recommended for regular monitoring use.
+  > A snapshot on a daily basis or every few hours is usually enough to get a good idea of how the server is using its cache
+  
+  #### Top relations in the cache
+  The following example of how to use pg_buffercache, and it's quite a good way to start your analysis
+  ```
+  pgbench=# select c.relname, count(*) as buffers 
+  from pg_class c 
+  inner join pg_buffercache b on c.relfilenode = b.relfilenode  
+  inner join pg_database d on b.reldatabase = d.oid and d.datname = current_database()
+  group by c.relname
+  order by 2 desc
+  limit 10;
+            relname           | buffers 
+  ----------------------------+---------
+   pgbench_accounts           |    2150
+   pg_toast_2618              |      69
+   pg_description             |      49
+   pg_description_o_c_o_index |      27
+   pg_statistic               |      24
+   pg_collation               |      19
+   pg_operator                |      18
+   pg_rewrite                 |      17
+   pg_depend                  |      17
+   sql_features               |      12
+  ```
+  #### Summary by usage count
+  That doesn't give any interesting information about the usage counts of either table though; this query will show them:
+  ```
+  pgbench=# select usagecount, count(*), isdirty
+  from pg_buffercache
+  group by isdirty, usagecount
+  order by isdirty, usagecount;
+  usagecount | count | isdirty 
+  ------------+-------+---------
+          1 |  4567 | f
+          2 |  3409 | f
+          3 |    85 | f
+          4 |    63 | f
+          5 |   620 | f
+            |  7640 | 
+  ```
+  The results just suggest there's not very much accumulating a high usage count on a straight percentage basis.
+  
+  #### Buffer contents summary with percentages
+  To start when analyzing a new database. It lets quickly see how much table represents relative to its total size:
+  ```
+  pgbench=# select c.relname, pg_size_pretty(count(*) * 8192) as buffered,
+  round(100.00 * count(*) / (select setting from pg_settings where name= 'shared_buffers')::integer, 1) as buffer_percent,
+  round(100.00 * count(*) * 8192 / pg_relation_size(c.oid), 1) as percent_of_relation
+  from pg_class c
+  inner join pg_buffercache b on c.relfilenode = b.relfilenode
+  inner join pg_database d on b.reldatabase = d.oid and d.datname = current_database()
+  group by c.oid, c.relname
+  order by 3 desc
+  limit 10;
+  
+  relname                     | buffered | buffer_percent | percent_of_relation 
+  ----------------------------+----------+----------------+---------------------
+   pgbench_accounts           | 17 MB    |           13.1 |                 2.6
+   pg_toast_2618              | 552 kB   |            0.4 |               106.2
+   pg_description             | 392 kB   |            0.3 |               108.9
+   pg_description_o_c_o_index | 216 kB   |            0.2 |               100.0
+   pg_statistic               | 192 kB   |            0.1 |               120.0
+   pg_depend_depender_index   | 80 kB    |            0.1 |               100.0
+   pg_operator                | 144 kB   |            0.1 |               128.6
+   pg_amproc                  | 72 kB    |            0.1 |               180.0
+   pg_amop                    | 88 kB    |            0.1 |               157.1
+   pg_depend                  | 136 kB   |            0.1 |               130.8
+  ```
+  > The **pg_relation_size()** function _**does not include data that has been stored in a TOAST**_ table associated with this one
 
   
-
 </details>
 
 
