--- a/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Память.md
+++ b/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Память.md
@@ -224,6 +224,52 @@ database process has accessed this block since its section of the buffer cache w
   ```
   > The **pg_relation_size()** function _**does not include data that has been stored in a TOAST**_ table associated with this one
 
+  Say some object use up to 33% of the cache, but holding onto nearly 100% of the data in that index.   
+  This would tells us that the database believes that keeping that data in memory is really important.   
+  Keeping that, the next we should investigate is usagecount data by that relation.
+  
+  #### Buffer usage count distribution
+  This query breaks down usage counts by relation
+  ```
+  pgbench=# select 
+  c.relname, 
+  count(*) as buffers,
+  usagecount
+  from pg_class c
+  inner join pg_buffercache b on c.relfilenode = b.relfilenode
+  inner join pg_database d on b.reldatabase = d.oid and d.datname = current_database() and relname like 'pgbench_%'
+  group by c.relname, usagecount
+  order by c.relname, usagecount
+  limit 10;
+  
+   relname          | buffers | usagecount 
+  ------------------+---------+------------
+   pgbench_accounts |    2124 |          1
+   pgbench_accounts |      20 |          2
+   pgbench_accounts |       2 |          3
+   pgbench_accounts |       4 |          5
+   pgbench_branches |       3 |          2
+   pgbench_branches |       1 |          4
+   pgbench_branches |       1 |          5
+   pgbench_tellers  |       1 |          2
+   pgbench_tellers  |       2 |          4
+   pgbench_tellers  |       4 |          5
+  ```
+  ### Using buffer cache inspection for sizing feedback
+  _**First**_, compare what percentage of the relations you believe are important to your application's performance appear to be cached.   
+  If this number is low, you may benefit from a larger buffer cache.   
+  A helpful _**secondary**_ look at this information is available if you combine this with hit rates from views such as **pg_stat_user_tables**.   
+  
+  If most of your pages have _**low usage counts**_ (0,1), but you're still _**getting good hit rates**_ from the table statistics, you can probably _**decrease the size**_ of the buffer cache without a performance loss.   
+  Even the simplest operating system LRU algorithm is capable of making good caching decisions where there aren't particularly popular pages to prioritize over transient ones.  
+  But if you are accumulating a _**large number of blocks with a high usage count**_ (4,5), this is strong evidence that your data is being served well and stored in the database shared buffer cache, and that your _**application might benefit from it being even larger**_.
+
+
+
+
+
+
+
   
 </details>
 
