--- a/004 Оптимизация/Практика оптимизации/001 Описание.md
+++ b/004 Оптимизация/Практика оптимизации/001 Описание.md
@@ -122,7 +122,7 @@
 [--статистику]()  
 [--autoexplain]()  
 ## 13. Обслуживание СУБД
-### [--Регулярное обслуживание]()
+### [Регулярное обслуживание](https://github.com/AV-ghub/PostgreSQL/blob/main/004%20%D0%9E%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0%20%D0%BE%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D0%B8/%D0%A1%D1%86%D0%B5%D0%BD%D0%B0%D1%80%D0%B8%D0%B8/%D0%9E%D0%B1%D1%89%D0%B8%D0%B5/Routine%20Maintenance.md)
 [--прогноз роста БД и свободного места]()  
 [--топ таблиц с динамикой роста (помним по 32 ТБ)]()  
 [--блоат индексов/тостов/данных]()  
