Update 002 Полезные скрипты.md

--- a/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
@@ -1,4 +1,7 @@
 ## Скрипты администрирования
+
+#### [System Information Functions and Operators](https://www.postgresql.org/docs/current/functions-info.html)
+
 ### Настройки
 #### Вывод текста системной функции
 ```bash
