--- a/001 Администрирование/001 Архитектура и утстановка/001 Указатель.md
+++ b/001 Администрирование/001 Архитектура и утстановка/001 Указатель.md
@@ -7,6 +7,10 @@
 
 [Multy version installation](https://github.com/AV-ghub/PostgreSQL-Cloud-Solutions/blob/main/PostgreSQL/Admin/003%20Multy%20version%20installation.md)
 
+[CentOS installation](https://github.com/AV-ghub/PostgreSQL-Cloud-Solutions/blob/main/Linux/CentOS/Intro/Installation/001%20Installation.md)
+
+[Ubuntu installation](https://github.com/AV-ghub/PostgreSQL-Cloud-Solutions/blob/main/Linux/Ubuntu/001%20Installation.md)
+
 ## Архитектура
 [Очистка](https://github.com/AV-ghub/PostgreSQL/blob/main/001%20%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5/001%20%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%B0%20%D0%B8%20%D1%83%D1%82%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0/999%20Resources/Vacuum.md)
 
